Made necessary adjustment to prevent force dark mode.

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -5,7 +5,18 @@
     margin: 0;
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
+    forced-color-adjust: none;
 }
+
+html {
+    -webkit-text-size-adjust: 100%;
+    forced-color-adjust: none;
+}
+
+:root {
+  color-scheme: light;
+}
+
 
 .federo-regular {
     font-family: "Federo", sans-serif;
@@ -14,13 +25,15 @@
 }
 
 .glass {
-    background: rgba(255, 255, 255, 0.12);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    background: #ffffff21 !important;
+    -webkit-backdrop-filter: blur(10px) brightness(1.2);
+    backdrop-filter: blur(10px) brightness(1.2);
     box-shadow:
         inset 0 1px 0 rgba(255, 255, 255, 0.35),
         0 12px 30px rgba(0, 0, 0, 0.45);
     border: 1px solid rgba(255, 255, 255, 0.18);
+    forced-color-adjust: none;
+    color-scheme: light;
 }
 
 .glass::after {
@@ -29,9 +42,11 @@
     inset: 0;
     border-radius: inherit;
     background: linear-gradient(120deg,
-            rgba(255, 255, 255, 0.35),
-            transparent 40%);
+            #ffffff54,
+            transparent 40%) !important;
     pointer-events: none;
+    forced-color-adjust: none;
+    color-scheme: light;
 }
 
 .dark-glass {
@@ -157,11 +172,6 @@ header h1 span {
     margin-top: 4.5rem;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.479), inset 0 0 5px rgba(255, 255, 255, 0.322);
     z-index: 2;
-}
-
-.info-content {
-    filter: none;
-    z-index: 100;
 }
 
 .hero .info h2 {
